# E71b-analysis-cpp

./: .gitignore  CMakeLists.txt  README.md
data/: BM  ST
include/: babymind.cpp  babymind.hpp
lib/: BMHitSearch.cpp  BMHitSearch.h  CMakeLists.txt  STHitSearch.cpp  STHitSearch.h
lib/src/: BMBSD.cpp  BMBSD.hpp  BMBSDDict.cc  BMBSDDict_rdict.pcm  BMBSDLinkDef.hh  BMBasicRecon.cpp  BMBasicRecon.hpp  BMBasicReconDict.cc  BMBasicReconDict_rdict.pcm  BMBasicReconLinkDef.hh  BMBeaminfo.cpp  BMBeaminfo.hpp  BMBeaminfoDict.cc  BMBeaminfoDict_rdict.pcm  BMBeaminfoLinkDef.hh  BMConst.hpp  Makefile
python/: run_EventDisplay.py
root/: Compare_each_ch.cc  CountNoADC.cpp  EachADC.cpp  EventDisplayAutoSave.cpp  EventDisplay_NoADC.cpp  EventDisplay_ToT.cpp  EventDisplay_adc.cpp  MultiRateCalc.cpp  NoiseTriggerGraph.cpp  ProtonRate.cpp  SandRate.C  ToTADCrate.cpp  ToTGraph.cpp  ToTTest.cpp  bunchHistHitBased.cpp  countHitsEachModule.cc  count_entries_xy.cc  count_entries_xy_ToT.cc
shell/: run_BM_EventDisplay.sh  run_TimingMatch.sh  run_TrackMatch.sh
src/: CMakeLists.txt  TimingMatch.cpp
test/: BMBranchReader.cpp  CMakeLists.txt
